tests/arrows/arrows.exp
Error ------------------------------------------------------------------------------------------ advanced_arrows.js:7:34

Cannot return `x` because number [1] is incompatible with string [2]. [incompatible-return]

   advanced_arrows.js:7:34
   7| var bad = (x: number): string => x; // Error!
                                       ^

References:
   advanced_arrows.js:7:15
   7| var bad = (x: number): string => x; // Error!
                    ^^^^^^ [1]
   advanced_arrows.js:7:24
   7| var bad = (x: number): string => x; // Error!
                             ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ advanced_arrows.js:11:2

Cannot cast `ident(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   advanced_arrows.js:11:2
   11| (ident("hi"): number); // Error
        ^^^^^^^^^^^

References:
   advanced_arrows.js:11:8
   11| (ident("hi"): number); // Error
              ^^^^ [1]
   advanced_arrows.js:11:15
   11| (ident("hi"): number); // Error
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- arrows.js:7:36

Cannot call `images.sort` with function bound to `compareFn` because string [1] is incompatible with number [2] in the
return value. [incompatible-call]

   arrows.js:7:36
      7|     images = images.sort((a, b) => (a.width - b.width) + "");
                                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:1010:38
   1010|     sort(compareFn?: (a: T, b: T) => number): Array<T>;
                                              ^^^^^^ [2]



Found 3 errors
